// Copyright 2022 The CubeFS Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied. See the License for the specific language governing
// permissions and limitations under the License.

syntax = "proto3";

package cubefs.blobstore.common.sharding;
option go_package = "./;sharding";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.gostring_all) = true;

import "gogoproto/gogo.proto";

enum RangeType {
  RangeTypeUNKNOWN = 0;
  RangeTypeHash = 1;
}

message Range {
  RangeType type = 1;
  repeated SubRange subs = 2 [(gogoproto.nullable) = false];
}

message SubRange {
  uint64 Min = 1;
  uint64 Max = 2;
}